--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,17 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm test
+      - setup_remote_docker
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run: 
+          name: "Build docker image and push to docker hub"
+          command: |
+            cp Dockerfile.production Dockerfile
+            docker build -t mitjungmj/example-nodejs-express:latest .
+            docker build -t mitjungmj/example-nodejs-express:${CIRCLE_SHA1} .
+            docker push mitjungmj/example-nodejs-express:latest
+            docker push mitjungmj/example-nodejs-express:${CIRCLE_SHA1}
+
       - run: echo Done
+
