--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,19 @@ jobs:
             docker build -t tayakorn/workshopcirclecl:${CIRCLE_SHA1} .
             docker push tayakorn/workshopcirclecl:latest
             docker push tayakorn/workshopcirclecl:${CIRCLE_SHA1}
+      - run:
+          name: "Call to rancher to deploy"
+          command: |
+              docker run --rm -it \
+                -e CATTLE_ACCESS_KEY="$CATTLE_ACCESS_KEY" \
+                -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
+                -e CATTLE_URL="$CATTLE_URL" \
+                etlweather/gaucho upgrade $RANGHER_EXZMPLE_NODEJS \
+                --imageUuid 'tayakorn/workshopcirclecl:latest' \
+                --batch_size 3 --start_first \
+                --auto_complete --timeout 600 \
+                /
+      
 
       - run: echo Done
 
