--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,6 @@ jobs:
                 etlweather/gaucho upgrade 1s13 \
                 --imageUuid 'tayakorn/workshopcirclecl:latest' \
                 --batch_size 3 --start_first \
-                --auto_complete --timeout 600 \
-                /
-      
-
+                --auto_complete --timeout 600 
       - run: echo Done
 
