--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,5 +36,7 @@ jobs:
                 -e CATTLE_URL="$CATTLE_URL" \
                 etlweather/gaucho upgrade 1s13 \
                 --imageUuid 'docker:tayakorn/workshopcirclecl:latest' 
+                --batch_size 3 --start_first \
+                --auto_complete --timeout 600 
       - run: echo Done
 
