--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
                 -e CATTLE_SECRET_KEY="$CATTLE_SECRET_KEY" \
                 -e CATTLE_URL="$CATTLE_URL" \
                 etlweather/gaucho upgrade 1s15 \
-                --imageUuid 'docker:tayakorn/workshopcirclecl:latest' 
+                --imageUuid 'docker:tayakorn/workshopcirclecl:latest' \
                 --batch_size 3 --start_first \
                 --auto_complete --timeout 600 
       - run: echo Done
